[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmvlab_lmc"
description = "Mmv_lab official codebase for Light My Cells: ISBI 2024 Challenges"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"
authors = [
    {name = "Yu Zhou", email = "eternalaudrey@gmail.com"},
    {name = "Shuo Zhao", email = "shuo.zhao@isas.de"},
    {name = "Justin Sonneck", email = "justin.sonneck@isas.de"},
    {name = "Jianxu Chen", email = "jianxu.chen@isas.de"},
]
dependencies = [
    "torch_em @ git+https://github.com/constantinpape/torch-em.git",
    "monai == 1.3.0",
    "lightning == 2.2.1",
    "timm == 0.4.12",
    "lion-pytorch == 0.1.4",
    "scikit-learn",
    "scipy",
    "scikit-image",
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "tifffile"
]